Fetch members endpoint on gameroom propose request
The REST API and not the UI should be responsible to provide the members
node endpoint upon the request.
