# examples/gameroom/daemon/src/rest_api/routes/gameroom.rs
@@ -13,7 +13,7 @@
 // limitations under the License.
 use std::collections::HashMap;
 
-use actix_web::{error, web, Error, HttpResponse};
+use actix_web::{client::Client, error, http::StatusCode, web, Error, HttpResponse};
 use futures::{Future, IntoFuture};
 use gameroom_database::{
     helpers,
@@ -43,19 +43,7 @@ use super::{
 #[derive(Debug, Serialize, Deserialize)]
 pub struct CreateGameroomForm {
     alias: String,
-    member: Vec<GameroomMember>,
-}
-
-#[derive(Debug, Serialize, Deserialize)]
-pub struct GameroomMember {
-    identity: String,
-    metadata: MemberMetadata,
-}
-
-#[derive(Debug, Serialize, Deserialize)]
-pub struct MemberMetadata {
-    organization: String,
-    endpoint: String,
+    members: Vec<String>,
 }
 
 #[derive(Debug, Serialize)]
@@ -107,131 +95,225 @@ pub fn propose_gameroom(
     pool: web::Data<ConnectionPool>,
     create_gameroom: web::Json<CreateGameroomForm>,
     node_info: web::Data<Node>,
+    client: web::Data<Client>,
+    splinterd_url: web::Data<String>,
     gameroomd_data: web::Data<GameroomdData>,
 ) -> impl Future<Item = HttpResponse, Error = Error> {
-    let mut members = create_gameroom
-        .member
-        .iter()
-        .map(|node| SplinterNode {
-            node_id: node.identity.to_string(),
-            endpoint: node.metadata.endpoint.to_string(),
-        })
-        .collect::<Vec<SplinterNode>>();
+    fetch_node_information(&create_gameroom.members, &splinterd_url, client).then(move |resp| {
+        let nodes = match resp {
+            Ok(nodes) => nodes,
+            Err(err) => match err {
+                RestApiResponseError::BadRequest(message) => {
+                    return HttpResponse::BadRequest()
+                        .json(ErrorResponse::bad_request(&message.to_string()))
+                        .into_future();
+                }
+                _ => {
+                    debug!("Failed to fetch node information: {}", err);
+                    return HttpResponse::InternalServerError()
+                        .json(ErrorResponse::internal_error())
+                        .into_future();
+                }
+            },
+        };
 
-    members.push(SplinterNode {
-        node_id: node_info.identity.to_string(),
-        endpoint: node_info
-            .metadata
-            .get("endpoint")
-            .unwrap_or(&"".to_string())
-            .to_string(),
-    });
+        let mut members = nodes
+            .iter()
+            .map(|node| SplinterNode {
+                node_id: node.identity.to_string(),
+                endpoint: node
+                    .metadata
+                    .get("endpoint")
+                    .unwrap_or(&"".to_string())
+                    .to_string(),
+            })
+            .collect::<Vec<SplinterNode>>();
 
-    let partial_circuit_id = members.iter().fold(String::new(), |mut acc, member| {
-        acc.push_str(&format!("::{}", member.node_id));
-        acc
-    });
+        members.push(SplinterNode {
+            node_id: node_info.identity.to_string(),
+            endpoint: node_info
+                .metadata
+                .get("endpoint")
+                .unwrap_or(&"".to_string())
+                .to_string(),
+        });
+        let partial_circuit_id = members.iter().fold(String::new(), |mut acc, member| {
+            acc.push_str(&format!("::{}", member.node_id));
+            acc
+        });
 
-    let scabbard_admin_keys = vec![gameroomd_data.get_ref().public_key.clone()];
+        let scabbard_admin_keys = vec![gameroomd_data.get_ref().public_key.clone()];
 
-    let mut scabbard_args = vec![];
-    scabbard_args.push((
-        "admin_keys".into(),
-        match serde_json::to_string(&scabbard_admin_keys) {
-            Ok(s) => s,
+        let mut scabbard_args = vec![];
+        scabbard_args.push((
+            "admin_keys".into(),
+            match serde_json::to_string(&scabbard_admin_keys) {
+                Ok(s) => s,
+                Err(err) => {
+                    debug!("Failed to serialize scabbard admin keys: {}", err);
+                    return HttpResponse::InternalServerError()
+                        .json(ErrorResponse::internal_error())
+                        .into_future();
+                }
+            },
+        ));
+
+        let mut roster = vec![];
+        for node in members.iter() {
+            let peer_services = match serde_json::to_string(
+                &members
+                    .iter()
+                    .filter_map(|other_node| {
+                        if other_node.node_id != node.node_id {
+                            Some(format!("gameroom_{}", other_node.node_id))
+                        } else {
+                            None
+                        }
+                    })
+                    .collect::<Vec<_>>(),
+            ) {
+                Ok(s) => s,
+                Err(err) => {
+                    debug!("Failed to serialize peer services: {}", err);
+                    return HttpResponse::InternalServerError()
+                        .json(ErrorResponse::internal_error())
+                        .into_future();
+                }
+            };
+
+            let mut service_args = scabbard_args.clone();
+            service_args.push(("peer_services".into(), peer_services));
+
+            roster.push(SplinterService {
+                service_id: format!("gameroom_{}", node.node_id),
+                service_type: "scabbard".to_string(),
+                allowed_nodes: vec![node.node_id.to_string()],
+                arguments: service_args,
+            });
+        }
+
+        let application_metadata = match check_alias_uniqueness(pool, &create_gameroom.alias) {
+            Ok(()) => match ApplicationMetadata::new(&create_gameroom.alias, &scabbard_admin_keys)
+                .to_bytes()
+            {
+                Ok(bytes) => bytes,
+                Err(err) => {
+                    debug!("Failed to serialize application metadata: {}", err);
+                    return HttpResponse::InternalServerError()
+                        .json(ErrorResponse::internal_error())
+                        .into_future();
+                }
+            },
             Err(err) => {
-                debug!("Failed to serialize scabbard admin keys: {}", err);
-                return HttpResponse::InternalServerError()
-                    .json(ErrorResponse::internal_error())
+                return HttpResponse::BadRequest()
+                    .json(ErrorResponse::bad_request(&err.to_string()))
                     .into_future();
             }
-        },
-    ));
+        };
 
-    let mut roster = vec![];
-    for node in members.iter() {
-        let peer_services = match serde_json::to_string(
-            &members
-                .iter()
-                .filter_map(|other_node| {
-                    if other_node.node_id != node.node_id {
-                        Some(format!("gameroom_{}", other_node.node_id))
-                    } else {
-                        None
-                    }
-                })
-                .collect::<Vec<_>>(),
-        ) {
-            Ok(s) => s,
+        let create_request = CreateCircuit {
+            circuit_id: format!(
+                "gameroom{}::{}",
+                partial_circuit_id,
+                Uuid::new_v4().to_string()
+            ),
+            roster,
+            members,
+            authorization_type: AuthorizationType::Trust,
+            persistence: PersistenceType::Any,
+            durability: DurabilityType::NoDurabilty,
+            routes: RouteType::Any,
+            circuit_management_type: "gameroom".to_string(),
+            application_metadata,
+        };
+
+        let payload_bytes = match make_payload(create_request, node_info.identity.to_string()) {
+            Ok(bytes) => bytes,
             Err(err) => {
-                debug!("Failed to serialize peer services: {}", err);
+                debug!("Failed to make circuit management payload: {}", err);
                 return HttpResponse::InternalServerError()
                     .json(ErrorResponse::internal_error())
                     .into_future();
             }
         };
 
-        let mut service_args = scabbard_args.clone();
-        service_args.push(("peer_services".into(), peer_services));
+        HttpResponse::Ok()
+            .json(SuccessResponse::new(json!({
+                "payload_bytes": payload_bytes
+            })))
+            .into_future()
+    })
+}
 
-        roster.push(SplinterService {
-            service_id: format!("gameroom_{}", node.node_id),
-            service_type: "scabbard".to_string(),
-            allowed_nodes: vec![node.node_id.to_string()],
-            arguments: service_args,
-        });
-    }
+fn fetch_node_information(
+    node_ids: &[String],
+    splinterd_url: &str,
+    client: web::Data<Client>,
+) -> Box<dyn Future<Item = Vec<Node>, Error = RestApiResponseError>> {
+    let node_ids = node_ids.to_owned();
+    Box::new(
+        client
+            .get(&format!("{}/nodes?limit={}", splinterd_url, std::i64::MAX))
+            .send()
+            .map_err(|err| {
+                RestApiResponseError::InternalError(format!("Failed to send request {}", err))
+            })
+            .and_then(move |mut resp| {
+                let body = resp.body().wait().map_err(|err| {
+                    RestApiResponseError::InternalError(format!(
+                        "Failed to receive response body {}",
+                        err
+                    ))
+                })?;
+                match resp.status() {
+                    StatusCode::OK => {
+                        let list_reponse: SuccessResponse<Vec<Node>> =
+                            serde_json::from_slice(&body).map_err(|err| {
+                                RestApiResponseError::InternalError(format!(
+                                    "Failed to parse response body {}",
+                                    err
+                                ))
+                            })?;
+                        let nodes = node_ids.into_iter().try_fold(vec![], |mut acc, node_id| {
+                            if let Some(node) = list_reponse
+                                .data
+                                .iter()
+                                .find(|node| node.identity == node_id)
+                            {
+                                acc.push(node.clone());
+                                Ok(acc)
+                            } else {
+                                Err(RestApiResponseError::BadRequest(format!(
+                                    "Could not find node with id {}",
+                                    node_id
+                                )))
+                            }
+                        })?;
 
-    let application_metadata = match check_alias_uniqueness(pool, &create_gameroom.alias) {
-        Ok(()) => match ApplicationMetadata::new(&create_gameroom.alias, &scabbard_admin_keys)
-            .to_bytes()
-        {
-            Ok(bytes) => bytes,
-            Err(err) => {
-                debug!("Failed to serialize application metadata: {}", err);
-                return HttpResponse::InternalServerError()
-                    .json(ErrorResponse::internal_error())
-                    .into_future();
-            }
-        },
-        Err(err) => {
-            return HttpResponse::BadRequest()
-                .json(ErrorResponse::bad_request(&err.to_string()))
-                .into_future();
-        }
-    };
+                        Ok(nodes)
+                    }
+                    StatusCode::BAD_REQUEST => {
+                        let message: String = serde_json::from_slice(&body).map_err(|err| {
+                            RestApiResponseError::InternalError(format!(
+                                "Failed to parse response body {}",
+                                err
+                            ))
+                        })?;
+                        Err(RestApiResponseError::BadRequest(message))
+                    }
+                    _ => {
+                        let message: String = serde_json::from_slice(&body).map_err(|err| {
+                            RestApiResponseError::InternalError(format!(
+                                "Failed to parse response body {}",
+                                err
+                            ))
+                        })?;
 
-    let create_request = CreateCircuit {
-        circuit_id: format!(
-            "gameroom{}::{}",
-            partial_circuit_id,
-            Uuid::new_v4().to_string()
-        ),
-        roster,
-        members,
-        authorization_type: AuthorizationType::Trust,
-        persistence: PersistenceType::Any,
-        durability: DurabilityType::NoDurabilty,
-        routes: RouteType::Any,
-        circuit_management_type: "gameroom".to_string(),
-        application_metadata,
-    };
-
-    let payload_bytes = match make_payload(create_request, node_info.identity.to_string()) {
-        Ok(bytes) => bytes,
-        Err(err) => {
-            debug!("Failed to make circuit management payload: {}", err);
-            return HttpResponse::InternalServerError()
-                .json(ErrorResponse::internal_error())
-                .into_future();
-        }
-    };
-
-    HttpResponse::Ok()
-        .json(SuccessResponse::new(json!({
-            "payload_bytes": payload_bytes
-        })))
-        .into_future()
+                        Err(RestApiResponseError::InternalError(message))
+                    }
+                }
+            }),
+    )
 }
 
 fn check_alias_uniqueness(
